Improved minor issues.

--- a/HWDigitRec.ipynb
+++ b/HWDigitRec.ipynb
@@ -738,13 +738,7 @@
       "1875/1875 [==============================] - 1s 575us/step - loss: 0.1934 - accuracy: 0.9457\n",
       "Epoch 7/20\n",
       "1875/1875 [==============================] - 1s 594us/step - loss: 0.1674 - accuracy: 0.9534\n",
-      "Epoch 8/20\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 8/20\n",
       "1875/1875 [==============================] - 1s 577us/step - loss: 0.1474 - accuracy: 0.9584\n",
       "Epoch 9/20\n",
       "1875/1875 [==============================] - 1s 575us/step - loss: 0.1346 - accuracy: 0.9628\n",
